# agri-voicebot

./: README.md  list_models.py  models_list.txt  pyproject.toml  requirements.txt  test_tts.py
app/: main.py
app/routers/: telegram.py  voice.py  voice_v2.py
app/services/: elevenlabs_tts.py  gemini_llm.py  llm.py  stt.py
